<resources>
    <string name="app_name">mySecondApp</string>
    <string name="action">action</string>
    <string name="info">Profile Info</string>
    <string name="image">image</string>
    <string name="andes_mountain">Andes Mountain</string>
    <string name="south_america">South, America</string>
    <string name="price">Price</string>
    <string name="description">This vast mountain range is renowned for its remarkable diversity in terms of topography and climate. It features towering peaks, active volcanoes, deep canyons, expansive plateaus, and lush valleys. The Andes are also home to</string>
    <string name="overview">Overview</string>
    <string name="detail">Detail</string>
    <string name="dollar">$</string>
    <string name="price_amount">230</string>
    <string name="hours">8 Hours</string>
    <string name="cel">16 °C</string>
    <string name="starts_amount">4.5</string>
    <string name="book_button">Book Now</string>
    <string name="main_image">main_image</string>
    <string name="company_image">company_image</string>
    <string name="person_image">person_image</string>
    <string name="user_name">Pawel Czerwinski</string>
    <string name="user_email">\@pawel_czerwinski</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_hint">შეიყვანეთ მეილი</string>
    <string name="password_hint">შეიყვანეთ პაროლი</string>
    <string name="username_hint">შეიყვანეთ თქვენი სახელი</string>
    <string name="privacy_police">By signing up, you agree to Photo’s Terms of Service and Privacy Policy.</string>
    <string name="log_in_text">Log In</string>
    <string name="log_in_button_text">Log In</string>
    <string name="usernamehint">შეიყვანეთ სახელი</string>
    <string name="lastnamehint">შეიყვანეთ გვარი</string>
    <string name="agehint">შეიყვანეთ ასაკი</string>
    <string name="add_user">Add User</string>
    <string name="delete_user">Delete User</string>
    <string name="edit_user">Edit User</string>
    <string name="active_users">Active Users :</string>
    <string name="deleted_users">Deleted Users :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_slogan">Let\'s you in</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="continue_with_apple">Continue With Apple</string>
    <string name="or">or</string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or_continue_with">or continue with</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_the_passowrd">Forget the passowrd ?</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="firstname">firstName</string>
    <string name="lastname">lastName</string>
    <string name="birthday">birthday</string>
    <string name="address">address</string>
    <string name="save">save</string>
    <string name="search_users">search users</string>
    <string name="search">search</string>
    <string name="delivery_address">Delivery address</string>
    <string name="add_new_address">Add New Adress</string>
    <string name="location_name">Location Name</string>
    <string name="location">Location</string>
    <string name="edit">Edit</string>
    <string name="home_icon">Home Icon</string>
    <string name="send_to">SEND TO</string>
    <string name="delete_location">Delete Location</string>
    <string name="my_orders">My Orders</string>
    <string name="pending">Pending</string>
    <string name="delivered">Delivered</string>
    <string name="cancelled">Cancelled</string>
    <string name="details">Details</string>
    <string name="change_to_delevered">change to delevered</string>
    <string name="change_to_cancelled">change to cancelled</string>
    <string name="tracking_number">Tracking number:</string>
    <string name="quanlity">Quanlity:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="type_your_messages_here">Type your messages here</string>
    <string name="admin">Admin</string>
    <string name="online">online</string>
    <string name="imagebutton">imageButton</string>
    <string name="choose_grid_size">Choose Grid Size:</string>
    <string name="start_game">Start Game</string>
    <string name="input_wanted_grid_size">input wanted grid size</string>
    <string name="completed">Completed</string>
    <string name="buy_again">Buy Again</string>
    <string name="wooden_chair">Wooden Chair</string>
    <string name="brown_qty_3">Brown | Qty = 3</string>
    <string name="_140_00">$140.00</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="please_share_your_review">Please share your review...</string>
    <string name="how_is_your_order">How Is Your Order ?</string>
    <string name="please_give_your_rating_and_also_your_review">please give your rating and also your review...</string>
    <string name="payment">Payment</string>
    <string name="card_management">Card Management</string>
    <string name="add_new">Add new+</string>
    <string name="or_check_out_with">or check out with</string>
    <string name="valid_thru">VALID THRU</string>
    <string name="add_new_card">Add new card</string>
    <string name="name">Name</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="card_holder_s_name">Card Holder\'s Name</string>
    <string name="card_number">Card Number</string>
    <string name="expires">Expires</string>
    <string name="cvv">CVV</string>
    <string name="add_card">Add Card</string>
    <string name="visa">VISA</string>
    <string name="mastercard">MASTERCARD</string>
    <string name="select_date">select date</string>
    <string name="no_date_selected">no date selected</string>
    <string name="welcome">WELCOME</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="log_out">Log Out</string>
    <string name="go_back">go back</string>
    <string name="back">Back</string>
    <string name="read">Read</string>
    <string name="user_details_will_appear_here">User Details will appear here...</string>
    <string name="offline">You are Offline</string>
    <string name="onlineUser">You are Online</string>
    <string name="user_inactive">User is Inactive</string>
    <string name="user_online">Online</string>
    <string name="user_active_minutes_ago">User was active minutes ago</string>
    <string name="user_active_hours_ago">User was active hours ago</string>
    <string name="user_active_long_time_ago">User was active long time ago</string>
    <string name="security_screen">Security screen</string>
    <string name="enter_your_passcode">Enter your passcode</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="statistics">Statistics</string>
    <string name="write_comment">Write comment…</string>
    <string name="longitude">Longitude:</string>

    <string name="username">UserName</string>

    <string name="pick_from_gallery">pick from gallery</string>
    <string name="take_photo">take photo</string>
    <string name="select_image">select image</string>
    <string name="camera_icon_desc">camera_icon_desc</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="search_for_food">Search for food</string>
    <string name="ingredients">Ingredients :</string>
    <string name="loading">loading...</string>


    <string name="camera_permission_required">camera permission required</string>
    <string name="camera_permission_message">This feature needs camera access to take photos. Please allow camera permission in app settings if you previously denied it</string>
    <string name="go_to_settings">go to settings</string>
    <string name="camera_permission_denied">camera permission denied</string>

    <string name="profile_update_successfully">Profile updated successfully</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="online_mode">Online Mode: Fetching latest food data</string>
    <string name="offline_mode">Offline Mode: Displaying cached food data</string>
    <string name="valid_email">Input a valid email address</string>
    <string name="otp_resend_successfully">OTP resent successfully</string>
    <string name="incorect_email_or_password">Incorrect email or password. Please try again.</string>
    <string name="already_registered_email">This email is already registered. Please use a different email.</string>
    <string name="invalid_otp">Invalid OTP. Please check and try again.</string>
    <string name="invalid_otp1">Invalid OTP. Please check and try again.</string>
    <string name="expired_jwt">Session expired. Please log in again.</string>
    <string name="other_error">An unexpected error occurred. Please try again.</string>
    <string name="error_parsing">Error parsing response. Please try again.</string>
    <string name="empty_response">Empty response</string>
    <string name="request_timed_out">Request timed out. Please try again.</string>
    <string name="internet_error">No internet connection. Please check your network.</string>
    <string name="view_source">view source</string>
    <string name="no_app_for_url">No application found to open URL.</string>
    <string name="invalid_url">Invalid URL.</string>
    <string name="otp_expired">OTP expired. Please resend</string>
    <string name="default_notification_channel_id">default</string>
    <string name="default_notification_channel_name">Default Channel</string>
    <string name="default_notification_channel_description">This is the default notification channel</string>
    <string name="transfer_internally">Transfer Internally</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="sell">Sell</string>
    <string name="_350">350 €</string>
    <string name="buy">Buy</string>
    <string name="_950">950 €</string>
    <string name="transfer_between_your_accounts">Transfer between your accounts</string>
</resources>