<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_grid_size"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sizeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/input_wanted_grid_size"
         />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startGameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_game" />
</androidx.appcompat.widget.LinearLayoutCompat>
