<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Home"
    android:orientation="vertical">



    <TextView
        android:id="@+id/logInUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginVertical="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/goBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        />

</androidx.appcompat.widget.LinearLayoutCompat>