<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:drawableStartCompat="@drawable/baseline_turn_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/register_text"
        android:id="@+id/go_back_to_main"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="40sp"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"
        android:letterSpacing="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/go_back_to_main"
        android:id="@+id/register_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/editTextLayout"
        >
        <LinearLayout
            android:id="@+id/registerFirst"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/userEmailText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/input"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:hint="@string/email_hint"
                android:textColorHint="@color/black"
                android:paddingVertical="20dp"
                android:inputType="textEmailAddress"
                android:layout_marginVertical="10dp"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/input"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:hint="@string/password_hint"
                android:textColorHint="@color/black"
                android:inputType="textPassword"
                android:paddingVertical="20dp"

                android:layout_marginVertical="10dp"
                android:layout_weight="1"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/next"

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginVertical="10dp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:paddingVertical="20dp"
                android:background="@drawable/register_button_main"
                android:layout_weight="1"/>
        </LinearLayout>
    <LinearLayout
        android:id="@+id/registerSecond"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/userNameText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/input"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:hint="@string/username_hint"
            android:textColorHint="@color/black"
            android:paddingVertical="20dp"
            android:inputType="text"
            android:layout_marginVertical="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:paddingVertical="20dp"
            android:background="@drawable/register_button_main"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_police"
            android:textSize="16sp"
            />
    </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>