<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".AddNewLocation">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/goBackToLocations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/baseline_keyboard_backspace_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/inputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/locationNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="40dp"
            android:hint="@string/location_name"
            android:paddingHorizontal="20dp"
            android:maxLength="30"
            android:paddingVertical="10dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/locationInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="40dp"
            android:hint="@string/location"
            android:paddingHorizontal="20dp"
            android:maxLength="30"
            android:paddingVertical="10dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addNewLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/add_new_button"
        android:textColor="@color/white"
        android:paddingVertical="10dp"
        android:paddingHorizontal="30dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="@+id/inputContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_new_address" />

    <androidx.appcompat.widget.AppCompatButton
        android:visibility="gone"
        android:id="@+id/deleteLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/add_new_button"
        android:textColor="@color/white"
        android:paddingVertical="10dp"
        android:paddingHorizontal="30dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toTopOf="@+id/addNewLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/delete_location" />

</androidx.constraintlayout.widget.ConstraintLayout>