<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:gravity="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:letterSpacing="0.1"
        android:layout_marginTop="50dp"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/standing"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="70dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="20dp"
                android:drawableStart="@drawable/baseline_email_24"/>


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailInputLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:hint="@string/email"
                android:paddingHorizontal="60dp"
                android:paddingVertical="10dp"/>

        </FrameLayout>



        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="20dp"
                android:drawableStart="@drawable/baseline_lock_outline_24"/>


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordInputLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:hint="@string/password"
                android:paddingHorizontal="60dp"
                android:inputType="textPassword"
                android:paddingVertical="10dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/passwordToggleLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginEnd="20dp"
                android:drawableStart="@drawable/baseline_remove_red_eye_24"/>


        </FrameLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>



    <FrameLayout
        android:id="@+id/registerButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            android:background="@drawable/register_button"
            />

        <ProgressBar
            android:id="@+id/loginButtonLoader"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white"
            android:visibility="gone"

            />
    </FrameLayout>

</androidx.appcompat.widget.LinearLayoutCompat>